# ok-lets-go

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init-letsencrypt.sh  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy.yml
api/: app.py  extensions.py  history.py  main.py  subscriptions.py
api/static/pwa/: manifest.json
api/static/scripts/: service-worker.js
api/static/styles/: styles.css
api/templates/: index.html
certbot/: cli.ini
nginx/: default.conf
nginx/conf.d/: default.conf
templates/: index.html
