[tool.poetry]
name = "ok-lets-go"
version = "0.1.0"
description = ""
authors = ["Ruud van den Boomen <ruud.van.den.boomen@sendcloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-SocketIO = "^5.3.4"
eventlet = "^0.33.3"
gevent = "^22.10.2"
python-dotenv = "^1.0.0"
gevent-websocket = "^0.10.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipdb = "^0.13.13"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
